# kra-lint

./: .gitignore  Cargo.toml  rustfmt.toml
crates-ext/camino-ext/: Cargo.toml
crates-ext/gura-ext/: Cargo.toml
crates-ext/gura-ext/src/: lib.rs
crates-ext/std-ext/: Cargo.toml
crates-ext/toml-ext/: Cargo.toml
crates-ext/toml-ext/src/: lib.rs
crates-ext/ziparchive-ext/: Cargo.toml
crates/kra-lint-cli/: Cargo.toml
crates/kra-lint-cli/src/: kra-lint-convert.rs  kra-lint.rs
crates/kra-lint-derive/: Cargo.toml
crates/kra-lint-impl/: Cargo.toml
crates/kra-lint-impl/src/: lib.rs  lint_config.rs  lint_config_collection.rs  lint_error.rs  lint_layer_property.rs  lint_mask_property.rs  lint_messages.rs  lint_messages_collection.rs  lint_metadata.rs  lint_number_match_expression.rs  lint_output_format.rs  lint_pass.rs  lint_string_match_expression.rs
crates/kra-lint-impl/src/lint_config/: lint_config.rs  lint_config_collection.rs  lint_config_error.rs  mod.rs
crates/kra-lint-impl/src/lint_config_fields/: match_generic.rs  match_number.rs  match_string.rs  mod.rs  value_by_layer_type.rs  value_by_mask_type.rs
crates/kra-lint-impl/src/lint_fields/: lint_generic_match_expression.rs  lint_layer_property.rs  lint_mask_property.rs  lint_number_match_expression.rs  lint_string_match_expression.rs  mod.rs
crates/kra-lint-impl/src/lint_output/: lint_messages.rs  lint_messages_collection.rs  lint_metadata.rs  lint_metadata_macros.rs  lint_output_error.rs  lint_output_format.rs  lint_output_plaintext.rs  mod.rs
crates/kra-lint-impl/src/lint_pass/: lint_pass.rs  lint_pass_animation.rs  lint_pass_audio.rs  lint_pass_audio_track.rs  lint_pass_colorize_mask.rs  lint_pass_colorspace.rs  lint_pass_copyright.rs  lint_pass_document_name.rs  lint_pass_document_size.rs  lint_pass_document_structure.rs  lint_pass_error.rs  lint_pass_file_layers.rs  lint_pass_file_name.rs  lint_pass_file_permissions.rs  lint_pass_filters.rs  lint_pass_hidden_surface.rs  lint_pass_layer_styles.rs  lint_pass_malformed_document.rs  lint_pass_non_default_blending.rs  lint_pass_prohibit_compositions.rs  lint_pass_prohibit_custom_palettes.rs  lint_pass_prohibit_kseexpr.rs  lint_pass_software_version.rs  lint_pass_surface_names.rs  lint_pass_surface_type.rs  lint_pass_vector_layers.rs  mod.rs
crates/kra-lint-impl/src/lint_pass_impl/: lint_pass_animation.rs  lint_pass_colorize_mask.rs  lint_pass_colorspace.rs  lint_pass_copyright.rs  lint_pass_document_name.rs  lint_pass_document_size.rs  lint_pass_document_structure.rs  lint_pass_file_layers.rs  lint_pass_file_name.rs  lint_pass_filters.rs  lint_pass_hidden_surface.rs  lint_pass_layer_styles.rs  lint_pass_malformed_document.rs  lint_pass_non_default_blending.rs  lint_pass_prohibit_compositions.rs  lint_pass_prohibit_custom_palettes.rs  lint_pass_prohibit_kseexpr.rs  lint_pass_software_version.rs  lint_pass_surface_names.rs  lint_pass_surface_type.rs  lint_pass_vector_layers.rs  mod.rs
crates/kra-lint-test/: Cargo.toml
crates/kra-lint-test/src/: kra-lint-test.rs
crates/kra-parser/: Cargo.toml
crates/kra-parser/src/: kra_archive.rs  kra_color_label.rs  kra_error.rs  kra_filter_config.rs  kra_filter_params.rs  kra_filterconfig.rs  kra_filterparams.rs  kra_keyframes.rs  kra_main_doc.rs  kra_maindoc.rs  kra_params.rs  kra_utils.rs  kra_xml_fields.rs  lib.rs
crates/ziparchive-ext/: Cargo.toml
docs/: common-issues.md
git-hooks/: install-hooks  pre-commit
src/: main.rs
src/lints/: lint_colorspace.rs  lint_config.rs  lint_config_collection.rs  lint_copyright.rs  lint_document_name.rs  lint_document_resolution.rs  lint_document_size.rs  lint_file_layers.rs  lint_hidden_surface.rs  lint_layer_property.rs  lint_layer_styles.rs  lint_layer_type_flags.rs  lint_malformed_document.rs  lint_mask_property.rs  lint_mask_type_flags.rs  lint_pass.rs  lint_prohibit_compositions.rs  lint_prohibit_kseexpr.rs  lint_prohibit_surface_names.rs  lint_software_version.rs  lint_string_match_expression.rs  lint_surface_type.rs  mod.rs  string_match_expression.rs
src/models/: kra_archive.rs  kra_documentinfo.rs  kra_error.rs  kra_maindoc.rs  kra_utils.rs  mod.rs
test/: .kra-lint  kra-lint-01.toml  kra-lint-02.hjson  kra-lint-03.ron  kra-lint-04.yaml  test-01.kra  test-03.kra  test-05.kra  test-06.kra  test-07.kra  test-11.kra  test-13.kra  test-17.kra  test-18.kra  test-20.kra  test-21.kra  test-27.kra  test-29.kra  test-31.kra  test-33.kra  test-37.kra  test-38.kra  test-39.kra  test-40.kra  test-44.kra
tests/lint_config_includes_01/: .kra-lint  kra-lint-02.json  kra-lint-05.yaml  kra-lint-07.gura
tests/lint_config_includes_02/: .kra-lint  expected.stderr
tests/lint_config_includes_03/: .kra-lint  corrupted.toml  expected.stderr  kra-lint.stderr
tests/lint_config_includes_04/: .kra-lint  expected.stderr  invalid.toml  kra-lint.stderr
tests/lint_config_includes_05/: .kra-lint  expected.stderr
tests/lint_config_includes_06/: .kra-lint
tests/lint_config_not_found/: kra-lint.stderr
tests/lint_output_format_gura_01/: kra-lint.stdout
tests/lint_output_format_gura_02/: kra-lint.args
tests/lint_output_format_json_01/: kra-lint.stdout
tests/lint_output_format_json_02/: .kra-lint  kra-lint.args
tests/lint_output_format_pickle_01/: kra-lint.args  kra-lint.stdout  sub_pass_01_02.kra
tests/lint_output_format_pickle_02/: kra-lint.stdout
tests/lint_output_format_plain_text_01/: kra-lint.stdout
tests/lint_output_format_ron_01/: kra-lint.stdout
tests/lint_output_format_ron_02/: kra-lint.args  lint_success.kra
tests/lint_output_format_yaml_01/: kra-lint.stdout  sub_pass_01_01.kra
tests/lint_output_format_yaml_02/: kra-lint.args
tests/lint_pass_animation/: .kra-lint  expected.stdout  kra-lint.stdout  lint_success.kra  sub_pass_01.kra  sub_pass_03.kra  sub_pass_04.kra  sub_pass_05.kra  sub_pass_06.kra  sub_pass_07_01.kra  sub_pass_07_02.kra  sub_pass_07_03.kra  sub_pass_2.kra
tests/lint_pass_audio/: .kra-lint  sub_pass_01.kra  sub_pass_02_02.kra
tests/lint_pass_audio_track/: .kra-lint  kra-lint.args  kra-lint.stdout  lint_success.kra  (+4 more)
(+196 files in other folders)
