[workspace]
resolver = "2"
members = [
    # kra-lint binary crates
    "crates/kra-lint-cli",
    "crates/kra-lint-test",

    # kra-lint library crates
    "crates/kra-lint-impl",
    "crates/kra-parser",

    # kra-lint private extension crates
    "crates-ext/camino-ext",
    "crates-ext/std-ext",
    "crates-ext/ziparchive-ext",
]

[workspace.dependencies]
# kra-lint library crates
kra-lint-impl  = { path = "crates/kra-lint-impl"      }
kra-parser     = { path = "crates/kra-parser"         }

# kra-lint private extension crates
camino-ext     = { path = "crates-ext/camino-ext"     }
std-ext        = { path = "crates-ext/std-ext"        }
ziparchive-ext = { path = "crates-ext/ziparchive-ext" }

# common workspace dependencies
camino      = { version = "1.1.4",   features = ["serde1"] }
derive_more = { version = "0.99.17", features = ["into_iterator", "display", "error", "from"], default-features = false }
itertools   = { version = "0.10.5" }
serde       = { version = "1.0.160", features = ["derive"] }
strum       = { version = "0.24.1",  features = ["derive"] }
zip         = { version = "0.6.4",   features = ["deflate"], default-features = false }
