[workspace.package]
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[workspace]
resolver = "2"
members = [
    # kra-lint binary crates
    "crates/kra-lint-cli",
    "crates/kra-lint-test",

    # kra-lint library crates
    "crates/kra-lint-impl",
    "crates/kra-parser",

    # kra-lint private extension crates
    "crates-ext/camino-ext",
    "crates-ext/std-ext",
    "crates-ext/ziparchive-ext",
]

[workspace.dependencies]
# kra-lint library crates
kra-lint-impl  = { path = "crates/kra-lint-impl"      }
kra-parser     = { path = "crates/kra-parser"         }

# kra-lint private extension crates
camino-ext     = { path = "crates-ext/camino-ext"     }
std-ext        = { path = "crates-ext/std-ext"        }
ziparchive-ext = { path = "crates-ext/ziparchive-ext" }

# common workspace dependencies
camino      = { version = "1.1.4",   features = ["serde1"] }
derive_more = { version = "0.99.17", features = ["into_iterator", "display", "error", "from"], default-features = false }
itertools   = { version = "0.11.0" }
serde       = { version = "1.0.164", features = ["derive"] }
strum       = { version = "0.25.0",  features = ["derive"] }
zip         = { version = "0.6.6",   features = ["deflate"], default-features = false }
