[workspace.package]
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[workspace]
resolver = "2"
members = [
    # kra-lint binary crates
    "crates/kra-lint-cli",
    "crates/kra-lint-test",

    # kra-lint library crates
    "crates/kra-lint-impl",
    "crates/kra-parser",

    # kra-lint private extension crates
    "crates-ext/camino-ext",
    "crates-ext/gura-ext",
    "crates-ext/std-ext",
    "crates-ext/toml-ext",
    "crates-ext/ziparchive-ext",
]

[workspace.dependencies]
# kra-lint library crates
kra-lint-impl  = { path = "crates/kra-lint-impl"      }
kra-parser     = { path = "crates/kra-parser"         }

# kra-lint private extension crates
camino-ext     = { path = "crates-ext/camino-ext"     }
gura-ext       = { path = "crates-ext/gura-ext"       }
std-ext        = { path = "crates-ext/std-ext"        }
toml-ext       = { path = "crates-ext/toml-ext"       }
ziparchive-ext = { path = "crates-ext/ziparchive-ext" }

# common workspace dependencies
camino      = { version = "1.1.6",   features = ["serde1"] }
derive_more = { version = "0.99.17", features = ["into_iterator", "display", "error", "from"], default-features = false }
itertools   = { version = "0.12.0" }
strum       = { version = "0.25.0",  features = ["derive"] }
zip         = { version = "0.6.6",   features = ["deflate"], default-features = false }

# serde workspace dependencies
serde       = { version = "1.0.193", features = ["derive"] }
toml        = { version = "0.8.8" }
serde_gura  = { version = "0.1.7" }
