[package]
name         = "toml-ext"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# common workspace dependencies
derive_more = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
