[package]
name = "kra-lint-cli"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"
default-run = "kra-lint"

[[bin]]
name = "kra-lint"
path = "src/kra-lint.rs"

[[bin]]
name = "kra-lint-convert"
path = "src/kra-lint-convert.rs"

[dependencies]
# kra-lint library crates
kra-parser    = { workspace = true }
kra-lint-impl = { workspace = true }

camino = { version = "1.1.4", features = ["serde1"] }
clap = { version = "4.2.4", default-features = false, features = ["std", "help", "usage", "derive", "env"] }
