[package]
name         = "kra-lint-cli"
default-run  = "kra-lint"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "kra-lint"
path = "src/kra-lint.rs"

[[bin]]
name = "kra-lint-convert"
path = "src/kra-lint-convert.rs"

[dependencies]
# kra-lint library crates
kra-parser    = { workspace = true }
kra-lint-impl = { workspace = true }

# common workspace dependencies
camino = { workspace = true }

# private dependencies
clap = { version = "4.3.10", features = ["std", "help", "usage", "derive", "env"], default-features = false }
