[package]
name         = "kra-lint-impl"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# kra-lint library crates
kra-parser = { workspace = true }

# kra-lint private extension crates
camino-ext     = { workspace = true }
std-ext        = { workspace = true }
ziparchive-ext = { workspace = true }

# common workspace dependencies
camino      = { workspace = true }
derive_more = { workspace = true }
itertools   = { workspace = true }
serde       = { workspace = true }
strum       = { workspace = true }
zip         = { workspace = true }

# private dependencies - general
regex         = { version = "1.8.4"  }
svg           = { version = "0.13.1" }
unicode-width = { version = "0.1.10" }
unix_mode     = { version = "0.1.3"  }

# private dependencies - hashing
base16ct = { version = "0.2.0", features = ["alloc"] }
sha2     = { version = "0.10.7" }

# private dependencies - serde
toml         = { version = "0.7.5"  }
serde_json   = { version = "1.0.99" }
deser-hjson  = { version = "1.2.0"  }
ron          = { version = "0.8.0"  }
serde_yaml   = { version = "0.9.22" }
serde-pickle = { version = "1.1.1"  }
