[package]
name         = "kra-lint-impl"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[features]
default = [
    "config-gura",
    "config-hjson",
    "config-json",
    "config-pickle",
    "config-ron",
    "config-toml",
    "config-yaml",

    "output-gura",
    "output-json",
    "output-pickle",
    "output-plaintext",
    "output-ron",
    "output-yaml",
]

config-gura   = ["dep:serde_gura"  ]
config-hjson  = ["dep:deser-hjson" ]
config-json   = ["dep:serde_json"  ]
config-pickle = ["dep:serde-pickle"]
config-ron    = ["dep:ron"         ]
config-toml   = ["dep:toml"        ]
config-yaml   = ["dep:serde_yaml"  ]

output-gura      = ["dep:serde_gura"  ]
output-json      = ["dep:serde_json"  ]
output-pickle    = ["dep:serde-pickle"]
output-plaintext = [                  ]
output-ron       = ["dep:ron"         ]
output-yaml      = ["dep:serde_yaml"  ]

[dependencies]
# kra-lint library crates
kra-parser = { workspace = true }

# kra-lint private extension crates
camino-ext     = { workspace = true }
std-ext        = { workspace = true }
ziparchive-ext = { workspace = true }

# common workspace dependencies
camino      = { workspace = true }
derive_more = { workspace = true }
itertools   = { workspace = true }
serde       = { workspace = true }
strum       = { workspace = true }
zip         = { workspace = true }

# private dependencies - general
num-traits    = { version = "0.2.15" }
regex         = { version = "1.8.4"  }
svg           = { version = "0.13.1" }
unicode-width = { version = "0.1.10" }
unix_mode     = { version = "0.1.3"  }

# private dependencies - hashing
base16ct = { version = "0.2.0", features = ["alloc"] }
sha2     = { version = "0.10.7" }

# private dependencies - serde
deser-hjson  = { version = "1.2.0",  optional = true }
ron          = { version = "0.8.0",  optional = true }
serde_gura   = { version = "0.1.5",  optional = true }
serde_json   = { version = "1.0.99", optional = true }
serde_yaml   = { version = "0.9.22", optional = true }
serde-pickle = { version = "1.1.1",  optional = true }
toml         = { version = "0.7.5",  optional = true }
