[package]
name         = "kra-lint-impl"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[features]
default = [
    "config-gura",
    "config-hjson",
    "config-json",
    "config-pickle",
    "config-ron",
    "config-toml",
    "config-yaml",

    "output-gura",
    "output-json",
    "output-pickle",
    "output-plaintext",
    "output-ron",
    "output-yaml",
]

config-gura   = ["dep:gura-ext"    ]
config-hjson  = ["dep:deser-hjson" ]
config-json   = ["dep:serde_json"  ]
config-pickle = ["dep:serde-pickle"]
config-ron    = ["dep:ron"         ]
config-toml   = ["dep:toml-ext"    ]
config-yaml   = ["dep:serde_yaml"  ]

output-gura      = ["dep:gura-ext"     ]
output-json      = ["dep:serde_json"   ]
output-pickle    = ["dep:serde-pickle" ]
output-plaintext = ["dep:unicode-width"]
output-ron       = ["dep:ron"          ]
output-yaml      = ["dep:serde_yaml"   ]

[dependencies]
# kra-lint library crates
kra-parser = { workspace = true }

# kra-lint private extension crates
camino-ext     = { workspace = true }
std-ext        = { workspace = true }
ziparchive-ext = { workspace = true }

# common workspace dependencies
camino      = { workspace = true }
derive_more = { workspace = true }
itertools   = { workspace = true }
serde       = { workspace = true }
strum       = { workspace = true }
zip         = { workspace = true }

# private dependencies - general
num-traits    = { version = "0.2.17" }
regex         = { version = "1.10.2" }
svg           = { version = "0.14.0" }
unix_mode     = { version = "0.1.4"  }

# private dependencies - hashing
base16ct = { version = "0.2.0", features = ["alloc"] }
sha2     = { version = "0.10.8" }

# private dependencies - serde
deser-hjson  = { version = "2.2.4",   optional = true }
ron          = { version = "0.8.1",   optional = true }
gura-ext     = { workspace = true,    optional = true }
serde_json   = { version = "1.0.108", optional = true }
serde_yaml   = { version = "0.9.27",  optional = true }
serde-pickle = { version = "1.1.1",   optional = true }
toml-ext     = { workspace = true,    optional = true }

# private dependencies - plain-text output
unicode-width = { version = "0.1.11", optional = true }
