[package]
name = "kra-lint-test"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "kra-lint-test"
path = "src/kra-lint-test.rs"

[dependencies]
camino = { version = "1.1.4", features = ["serde1"] }
derive_more = { version = "0.99.17", default-features = false, features = ["into_iterator", "display", "error", "from"] }
diff = "0.1.13"
glob = "0.3.1"
