[package]
name         = "kra-lint-test"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "kra-lint-test"
path = "src/kra-lint-test.rs"

[dependencies]
# common workspace dependencies
camino      = { workspace = true }
derive_more = { workspace = true }

# private dependencies
diff = { version = "0.1.13" }
glob = { version = "0.3.1"  }
