[package]
name = "kra-parser"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[dependencies]
ziparchive-ext = { path = "../ziparchive-ext/" }

camino = { version = "1.1.4", features = ["serde1"] }
derive_more = { version = "0.99.17", default-features = false, features = ["into_iterator", "display", "error", "from"] }
serde = { version = "1.0.160", features = ["derive"] }
strong-xml = "0.6"
strum = { version = "0.24.1", features = ["derive"] }
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
