[package]
name = "kra-parser"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[dependencies]
# kra-lint private extension crates
camino-ext     = { workspace = true }
ziparchive-ext = { workspace = true }

# common workspace dependencies
camino      = { workspace = true }
derive_more = { workspace = true }
serde       = { workspace = true }
strum       = { workspace = true }
zip         = { workspace = true }

# private dependencies
strong-xml = { version = "0.6" }
