[package]
name         = "kra-parser"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# kra-lint private extension crates
camino-ext     = { workspace = true }
ziparchive-ext = { workspace = true }

# common workspace dependencies
camino      = { workspace = true }
derive_more = { workspace = true }
serde       = { workspace = true }
strum       = { workspace = true }
zip         = { workspace = true }

# private dependencies
strong-xml = { version = "0.6.3" }
